@@ -284,6 +284,7 @@ AC_OUTPUT([
 	source/precision/Makefile
 	source/simplify/Makefile
 	source/util/Makefile
+	swig/geos.i
 	swig/Makefile
 	swig/python/Makefile
 	swig/python/tests/Makefile
