@@ -15,18 +15,18 @@
 /* Constants copied from geos_c.h.  Would be nice
    to reuse the originals but we can't without exposing
    the whole c api. */
-#define GEOS_VERSION_MAJOR 3
-#define GEOS_VERSION_MINOR 0
-#define GEOS_VERSION_PATCH 0rc1
-#define GEOS_VERSION "3.0.0rc1"
-#define GEOS_JTS_PORT "1.7.1"
+#define GEOS_VERSION_MAJOR @VERSION_MAJOR@
+#define GEOS_VERSION_MINOR @VERSION_MINOR@
+#define GEOS_VERSION_PATCH @VERSION_PATCH@
+#define GEOS_VERSION "@VERSION@"
+#define GEOS_JTS_PORT "@JTS_PORT@"
 
-#define GEOS_CAPI_VERSION_MAJOR 1
-#define GEOS_CAPI_VERSION_MINOR 1
-#define GEOS_CAPI_VERSION_PATCH 1
+#define GEOS_CAPI_VERSION_MAJOR @CAPI_VERSION_MAJOR@
+#define GEOS_CAPI_VERSION_MINOR @CAPI_VERSION_MINOR@
+#define GEOS_CAPI_VERSION_PATCH @CAPI_VERSION_PATCH@
 #define GEOS_CAPI_FIRST_INTERFACE GEOS_CAPI_VERSION_MAJOR 
 #define GEOS_CAPI_LAST_INTERFACE (GEOS_CAPI_VERSION_MAJOR+GEOS_CAPI_VERSION_MINOR)
-#define GEOS_CAPI_VERSION "3.0.0rc1-CAPI-1.1.1"
+#define GEOS_CAPI_VERSION "@VERSION@-CAPI-@CAPI_VERSION@"
 
 /* Supported geometry types */
 enum GEOSGeomTypes { 
